# ChangeLog for x11-terms/pssh
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/pssh/ChangeLog,v 1.10 2009/04/16 21:17:31 jsbronder Exp $

*pssh-1.4.3 (16 Apr 2009)

  16 Apr 2009; Justin Bronder <jsbronder@gentoo.org> +pssh-1.4.3.ebuild:
  Bump pssh-1.4.3 (#265810), fixes deprecation warnings with python-2.6

  29 May 2008; Ali Polatel <hawking@gentoo.org> pssh-1.3.1.ebuild:
  python_mod_optimize is ROOT aware.

*pssh-1.3.1 (17 Jan 2008)

  17 Jan 2008; Samuli Suominen <drac@gentoo.org> +pssh-1.3.1.ebuild:
  Version bump.

  26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Update for cluster herd split to hp-cluster and ha-cluster.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  17 Jul 2005; Konstantin Arkhipov <voxus@gentoo.org> -pssh-1.0.0.ebuild,
  -pssh-1.1.1.ebuild, pssh-1.2.0.ebuild:
  Cleaned out old ebuilds, added ~amd64 keyword to 1.2.0.

*pssh-1.2.0 (24 May 2005)

  24 May 2005; Donnie Berkholz <spyderous@gentoo.org>; +pssh-1.2.0.ebuild:
  (#87320) Version bump.

*pssh-1.0.0 (04 Nov 2004)

  04 Nov 2004; Konstantin Arkhipov <voxus@gentoo.org> :
  1.0.0 unmasked on x86.

*pssh-1.1.1 (04 Nov 2004)

  04 Nov 2004; Konstantin Arkhipov <voxus@gentoo.org> +pssh-1.1.1.ebuild:
  Version bump.

  03 Sep 2004; David Holm <dholm@gentoo.org> pssh-1.0.0.ebuild:
  Added to ~ppc.

*pssh-1.0.0 (21 Jul 2004)

  21 Jul 2004; Konstantin Arkhipov <voxus@gentoo.org> +clusterssh-2.16.ebuild:
  Initial revision, closes #61161.